added custom sizing for phones

--- a/albums.html
+++ b/albums.html
@@ -495,6 +495,30 @@
             }
         }
 
+    @media (max-width: 768px) {
+
+        body{
+            overflow x: auto;
+        }
+
+        nav ul {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            margin: 8px 0; /* More space between items */
+        }
+
+        nav ul li a {
+            font-size: 20px; /* Smaller font size */
+            padding-left: 15px;
+        }
+    }
+
     </style>
     <header>
         <a href="https://ab23223.github.io/INTENCMEDIA/">
