--- a/buy.html
+++ b/buy.html
@@ -150,6 +150,31 @@
             background-color: #d3d3d3;
             cursor: not-allowed;
         }
+
+    @media (max-width: 768px) {
+
+        body{
+            overflow: hidden;
+        }
+
+        nav ul {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0;
+            margin-right: -20px;
+        }
+
+        nav ul li {
+            margin: 8px 0; /* More space between items */
+        }
+
+        nav ul li a {
+            font-size: 18px;
+            padding-left: 10px;
+        }
+    }
+
     </style>
     <header>
         <a href="index.html">
