--- a/checkout.html
+++ b/checkout.html
@@ -187,6 +187,31 @@
             color: #888; /* Lighter color for placeholder */
             font-style: italic; /* Italicize placeholder text */
         }
+
+    @media (max-width: 768px) {
+
+        body{
+            overflow: hidden;
+        }
+
+        nav ul {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            margin: 8px 0; /* More space between items */
+        }
+
+        nav ul li a {
+            font-size: 18px; /* Smaller font size */
+            padding-left: 15px;
+        }
+    }
+
     </style>
 </head>
 <body>
