--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html#albums">Albums</a></li>
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
-                <li><a href="buy.html">Buy More</a></li>
+                <li><a href="buy.html">Buy</a></li>
             </ul>
         </nav>
     </header>
