--- a/albums.html
+++ b/albums.html
@@ -498,7 +498,7 @@
     @media (max-width: 768px) {
 
         body{
-            overflow x: auto;
+            overflow-x: auto;
         }
 
         nav ul {
